<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
                name="pet"
                type="com.thernat.pets.vo.Pet"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ImageView
                android:id="@+id/image_pet_picture"
                android:layout_width="140dp"
                android:layout_height="140dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <TextView
                android:id="@+id/text_pet_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/image_pet_picture"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:gravity="center"
                android:text="@{pet.name}"
                android:layout_marginTop="@dimen/material_design_small_margin_size"
                tools:text="Lassie"
        />

        <TextView
                android:id="@+id/text_label_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/image_pet_picture"
                app:layout_constraintTop_toBottomOf="@id/text_pet_name"
                android:layout_marginTop="@dimen/material_design_small_margin_size"
                android:layout_marginStart="@dimen/material_design_small_margin_size"
                android:text="@string/label_type"
        />

        <TextView
                android:id="@+id/text_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/material_design_medium_margin_size"
                app:layout_constraintTop_toTopOf="@id/text_label_type"
                app:layout_constraintStart_toEndOf="@id/text_label_type"
                android:text="@{pet.type}"
                tools:text="German Shepherd"
        />

        <TextView
                android:id="@+id/text_label_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/text_label_type"
                app:layout_constraintTop_toBottomOf="@id/text_label_type"
                android:layout_marginTop="@dimen/material_design_small_margin_size"
                android:text="@string/label_age"
        />

        <TextView
                android:id="@+id/text_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/text_label_age"
                app:layout_constraintStart_toStartOf="@id/text_type"
                android:text="@{String.valueOf(pet.age)}"
                tools:text="12"
        />

        <TextView
                android:id="@+id/text_label_owner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/text_label_type"
                app:layout_constraintTop_toBottomOf="@id/text_label_age"
                android:layout_marginTop="@dimen/material_design_small_margin_size"
                android:text="@string/label_owner"
        />

        <TextView
                android:id="@+id/text_owner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/text_label_owner"
                app:layout_constraintStart_toStartOf="@id/text_type"
                android:text="@{pet.owner}"
                tools:text="Kelly"
        />




    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>